--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,23 @@
+@article{lee2003compilation,
+  title={Compilation approach for coarse-grained reconfigurable architectures},
+  author={Lee, Jongeun and Choi, Kiyoung and Dutt, Nikil D},
+  year={2003},
+  publisher={IEEE COMPUTER SOC}
+}
+
+@misc{kai2003synopsys,
+  title={Synopsys Prime Power Manual Release U-2003.06-QA},
+  author={Kai, Wang and Zhiwei, Xu},
+  year={2003},
+  publisher={New York: McGrawi-Hill Publishers}
+}
+
+@misc{cadencecompiler,
+  title={Compiler User’s Manual},
+  author={Cadence, RTL},
+  publisher={Cadence}
+}
+
 @inproceedings{4,
   title={Array data layout for the reduction of cache conflicts},
   author={Manjikian, Naraig and Abdelrahman, Tarek},
